--- a/p.css
+++ b/p.css
@@ -26,7 +26,7 @@ body {
       position:absolute ;
       background-color:#00E676;
       background-image:linear-gradient(to bottom, #709615 20%, #11c41d);
-      height:20px;
+      height:;
       width:70px;
       border:none;
       overflow:hidden;
